feat: add resend email verification
