# internal/adapters/http/server.go
@@ -68,6 +68,7 @@ func (s *Server) setupRoutes(tokenSvc ports.TokenService) {
 	s.mux.HandleFunc("GET /v1/users/verify-email/{token}", s.handlers.UserHandler.VerifyEmail)
 	s.mux.HandleFunc("GET /v1/users/{uuid}", s.handlers.UserHandler.GetByID)
 	s.mux.HandleFunc("PATCH /v1/users/password", m.Chain(s.handlers.UserHandler.UpdatePassword, auth))
+	s.mux.HandleFunc("POST /v1/users/verify-email/resend", m.Chain(s.handlers.UserHandler.ResendEmailVerification, auth))
 }
 
 func (s *Server) setupMiddleware() http.Handler {
